--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html dir="rtl">
   <head>
-    <title>Salleh Store</title>
+    <title>Salle7 Store</title>
+    <link rel="shortcut icon" href="./Img/Salleh.png" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
